Remove x-axis scrollbar issue

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -5,8 +5,8 @@
 /* For mobile phones: */
 body {
     background-color: $background-secondary;
-    width: 100vw;
-    max-width: 100vw;
+    width: 100%;
+    max-width: 100%;
     overflow-x: hidden;
 
     display: flex;
@@ -16,6 +16,7 @@ body {
 }
 
 header, main, footer {
+    padding: 0 30px;
     width: 95%;
     height: 500px;
     background-color: $background-primary;
